fix(Radio): Set min-width to stop svg from being squished

--- a/react/Radio/Radio.less
+++ b/react/Radio/Radio.less
@@ -36,6 +36,7 @@
 .svg {
   background-color: @sk-white;
   width: @circumference;
+  min-width: @circumference;
   height: @circumference;
   border: @field-border-width solid @sk-mid-gray-light;
   border-radius: 100%;
